# ML-Esp32

./: CMakeLists.txt  ML-Esp32.code-workspace
main/: CMakeLists.txt  hvac_controler.cpp  hvac_controler.h  idf_component.yml  main.cpp
main/data/: test_backprop_tools_nn_models_mlp_evaluation.h  test_backprop_tools_nn_models_mlp_training.h
